# shuttle-code-hunt-2024

./: Cargo.toml  LICENSE
.sqlx/: query-3f1856e826027826f4add79bb7415db5840c8bc7b7bbf01efc0f924e55073bad.json  query-4e548c9145f76b3ff2011f585029e09f0d31003cf8bc046e2fac8dfa302ea059.json  query-74360e3652f3b02a4c8f6caa1104a54fd916704e10d309bc41206c2065b61637.json  query-7e2baf1222e34cd6e00f484a16b2e98911b0a1abd5ae205218a4880df2bb8519.json  query-8a8186a28c7fd86c8c6006954ea4e11791d93d1f47e4fbdf4b108194e6cd0717.json  query-92fcdf2f17af73d0195c630be6c590ba6f7e5b4c054589e5b0a72eb371ca90ff.json  query-e9819eb6af72201ecda969f5189e0bbbfb8e0ee7d2647d8974be2242ee87a9f1.json
src/: day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
